--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://bachlx:RgN6nLhE8ck6fID2@cluster0.8ag16tv.mongodb.net/mydb?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=supersecretkey123
